# Project-Analysis

./: README.md  framework_patterns.py  main.py  microservice_detector.py  project_analyzer.py  pyproject.toml  requirements.txt  run_analyzer.py
gui/: __init__.py  analyzer_thread.py  chart_widgets.py  main_window.py  path_selector.py  settings_panel.py
