[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-analyzer"
version = "1.0.0"
description = "A comprehensive tool for analyzing project structures, detecting frameworks, and identifying microservice architectures"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["analysis", "project", "microservices", "framework detection", "static analysis"]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.4.0",
    "markdown>=3.4.0",
    "pathlib>=1.0.1",
    "typing-extensions>=4.0.0",
    "concurrent-log-handler>=0.9.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/project-analyzer"
"Bug Tracker" = "https://github.com/yourusername/project-analyzer/issues"

[project.scripts]
project-analyzer = "project_analyzer.main:main"

[tool.setuptools]
packages = ["project_analyzer", "project_analyzer.gui"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"